# dev

./: .gitignore  .pre-commit-config.yaml  README.md  index.md  pyproject.toml  requirements.txt
ai/: ai.md  ai_markmap.md
ai/chatgpt/: prompt.md
anaconda/: index.md  terminal.md
dev/jetbrains/: index.md
dev/machine_learning/forecasting/: index.md
dev/meta/: index.md
dev/package_management/docker/: docker_compose.md  docker_swarm.md  docker_terminal.md  index.md
dev/package_management/google-kubernetes/: kubernetes.md
dev/package_management/poetry/: poetry_terminal.md
git/: git.md  git_markmap.md  index.md  pre-commit.md
google/: bigquery.md  google_analytics.md  google_analytics_markmap.md  google_markmap.md
jetbrains/: index.md  pycharm.md
meta/: index.md  meta_markmap.md
microsoft/: index.md
package_management/: index.md  pipx_example.py  pipx_terminal.md  terminal.md
package_management/conda/: conda.md  conda_terminal.md
package_management/docker/: docker_terminal.md  index.md
package_management/docker/example/: Dockerfile  compose.yaml
package_management/pip/: pip.md  pip_terminal.md
package_management/pipenv/: pipenv.md
package_management/pipx/: pipx_terminal.md
package_management/poetry/: poetry.md  poetry_terminal.md
python/: index.md  pre-commit.md  python.md  python_markmap.md  requirements.txt  terminal.md
python/data_science/: data_science.md
python/package_management/: package_management_markmap.md
python/package_management/pip/: pip.md
resources/: index.md  resources_markmap.md
shell/: ohmyzsh_terminal.md
(+40 files in other folders)
