[tool.poetry]
name = "dev"
version = "0.1.0"
description = "mindmap dev"
authors = ["Luis Salamo Esteve <lsalamo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dns-shark = "1"
setuptools-git = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
